--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           
           <ul class="ul-check list-unstyled success">
             <li>Оформлять техническое задание</li>
-            <li>Внесить правки</li>
+            <li>Вносить правки</li>
             <li>Оставлять отметки</li>
           </ul>
           
