--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
             
 
-            <h1 class="text-white font-weight-light text-uppercase font-weight-bold" data-aos="fade-up">Анастасия Толокольникова</h1>
+            <h1 class="text-white font-weight-light text-uppercase font-weight-bold" data-aos="fade-up">Вероника Якубова</h1>
             <p class="mb-5" data-aos="fade-up" data-aos-delay="100">ИДМ-20-04</p>
 
           </div>
