--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
   
 
-    <div class="site-blocks-cover overlay" style="background-image: url(images/it.png);" data-aos="fade" data-stellar-background-ratio="0.5" id="section-home">
+    <div class="site-blocks-cover overlay" style="background-image: url(images/new.jpg);" data-aos="fade" data-stellar-background-ratio="0.5" id="section-home">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
 
